# TextHashing

./: .gitignore  CMakeLists.txt  README.md  err  makefile
Generator/: main.cpp
Generator/testing_files/: source50_01.txt  source50_02.txt  source50_03.txt  source50_04.txt  source50_05.txt  source50_06.txt  source50_07.txt  source50_08.txt  source50_09.txt  source50_10.txt  source50_11.txt  source50_12.txt  source50_13.txt  source50_14.txt  source50_15.txt  source50_16.txt  source50_17.txt  source50_18.txt  source50_19.txt  source50_20.txt
Jaccard/: main.cpp
LSH/: main.cpp
SimCalculator/: Jaccard_fool.cpp  Jaccard_hash_order.cpp  Jaccard_hash_roll.cpp  LSH.cpp  Minhash.cpp  Minhash_norm.cpp  RollingHasher.cpp  Utils.cpp  main.cpp  man.cpp  utilities.cpp
exp/: SimCalculator  gen_sources.sh  makefile  run_exps.sh  seed_gen.cpp  source100  source1000  source10000  source50
